syntax = "proto3";

package Config;

message CouponConfig {
	repeated int32 activeCoupons = 1;
	map<int32, int32> couponRates = 2;
}