syntax = "proto3";

package Dto;

message MultiChatMessage {
  int32 type = 1;
  string fromName = 2;
  repeated int32 receivers = 3;
  string text = 4;
}
