syntax = "proto3";

package ExpeditionProto;

message QueryChannelExpedtionRequest {
	int32 channel = 1;
}

message QueryChannelExpedtionResponse {
	repeated ChannelExpeditionDto list = 1;
}

message ChannelExpeditionDto {
	int32 channel = 1;
	repeated ExpeditionInfoDto expeditions = 2;
}

message ExpeditionInfoDto {
	int32 type = 1;
	int32 status = 2;
	repeated ExpeditionMemberDto members = 3;
	int32 leaderId = 4;
}

message ExpeditionMemberDto {
	int32 id = 1;
	string name = 2;
}
