syntax = "proto3";

package Dto;

message CreateInviteRequest {
  int32 type = 1;
  int32 fromId = 2;
  string toName = 3;
}

message CreateInviteResponse {
  int32 code = 1;
  int32 type = 2;
  int32 receivePlayerId = 3;
  string receivePlayerName =4;
  int32 key = 5;
  int32 senderPlayerId = 6;
  string senderPlayerName = 7;
}
